2013-03-08  Pedro Vicente  <pvicente@uci.edu>

	* Add regression tests for creation of variables with ancestor group dimensions (GPE, non-GPE)
  
	* nco_bld_var_dmn() Assign variables dimensions to either coordinates or dimension structs
    handle "out of scope" cases as non assigned coordinate

	* Add regression test for coordinate "out of scope" (with group depth greater than the variable that uses the coordinate)

2013-03-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.6 release procedure:
 	Changes since nco-4_2_5: --rec_apn, non-atomic ignore, --fix_rec_crd
	cd ~/nco;cvs tag -d nco-4_2_6;cvs tag -d nco-4_2_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.6 release"
	cvs tag -c nco-4_2_6;cvs tag -c nco-4_2_6-1

	* Implement and test ncflint --fix_rec_crd

2013-03-07  Charlie Zender  <zender@uci.edu>

	* Add hooks for ncflint --fix_rec_crd

2013-03-06  Pedro Vicente  <pvicente@uci.edu>

	* nco_scp_var_crd() Return in scope coordinate for variable

	* nco_bld_var_dmn() Assign variables dimensions to either coordinates or dimension structs

	* nco_get_sls_chr_cnt() Get number of slash characters in a string path

	* nco_get_str_pth_sct() Get full name token structure (path components)

	* Add regression tests for "parallel" scope

2013-03-05  Pedro Vicente  <pvicente@uci.edu>

	* nco_dmn_fll_nm_id() Return unique dimension full name from unique ID

	* nco_dmn_trv_sct() Return unique dimension object from unique ID

2013-03-05  Charlie Zender  <zender@uci.edu>

	* Add record character variables to in.cdl

2013-03-04  Pedro Vicente  <pvicente@uci.edu>

	* nco_bld_dmn_ids_trv() Build dimension info for all variables using unique dimension IDs

	* nco_has_crd_dmn_scp() Is there a variable with same name in dimension's scope?

2013-03-02  Pedro Vicente  <pvicente@uci.edu>

	* nco_xtr_crd_add() Add all coordinates to extraction list
	re-written for GTT instead of using netCDF API calls

2013-02-27  Pedro Vicente  <pvicente@uci.edu>
